test/should_pass/enum_001.grg
actions enum_001 using enum_model_001;

rule r {
	pattern {
		a:A -b:B-> a;
	}
	modify {
		eval {
			a.e = b.e;
			b.i = a.e;
			b.i = (int)a.e;
			b.e = te::a;
		}
	}
}

