test/should_fail/cast_003.grg
actions cast_003 using attrib_model_001, enum_model_001;

rule r {
	pattern {
		x: NFLOAT;
		k: A;
	}
	modify {
		eval {
			k.e = (te) x.a;
		}
	}
}
